# graphem

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  api_reference.html  build_docs.py  check_imports.py  contributing.html  genindex.html  graphem.html  graphem.py  index.html  installation.html  modules.html  objects.inv  profile.prof  profile_generator.html  profile_with_pyinstrument.py  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements.txt  run_benchmarks.py  search.html  searchindex.js  setup.cfg  setup.py  simple_test.prof  test_profile.prof  test_profile.py  tutorials.html
.doctrees/: api_reference.doctree  contributing.doctree  graphem.doctree  index.doctree  installation.doctree  modules.doctree  quickstart.doctree  tutorials.doctree
.github/workflows/: deploy_docs.yml  draft-pdf.yml  pylint.yml  tests.yml
_modules/: index.html
_modules/graphem/: benchmark.html  datasets.html  embedder.html  generators.html  index.html  influence.html  visualization.html
_sources/: api_reference.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  tutorials.rst.txt
docs/: all-documents.html  api_reference.rst  apidocs-help.html  classIndex.html  conf.py  contributing.rst  fullsearchindex.json  graphem.benchmark.html  graphem.datasets.DatasetLoader.html  graphem.datasets.NetworkRepositoryDataset.html  graphem.datasets.SNAPDataset.html  graphem.datasets.SemanticScholarDataset.html  graphem.datasets.html  graphem.embedder.GraphEmbedder.html  graphem.embedder.html  graphem.generators.html  graphem.index.HPIndex.html  graphem.index.html  graphem.influence.html  graphem.rst  graphem.visualization.html  index.html  index.rst  installation.rst  moduleIndex.html  modules.rst  nameIndex.html  objects.inv  quickstart.rst  searchindex.json  tutorials.rst  undoccedSummary.html
docs/_build/html/: .buildinfo  api_reference.html  contributing.html  genindex.html  graphem.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_build/html/.doctrees/: api_reference.doctree  (+3 more)
docs/_build/latex/: graphem.tex
examples/: graph_generator_example.py  graph_generator_test.py  random_regular_example.py  random_regular_test.py  real_world_datasets_example.py  real_world_datasets_test.py
graphem/: __init__.py  benchmark.py  datasets.py  embedder.py  generators.py  index.py  influence.py  visualization.py
graphem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graphem_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper/: paper.bib  paper.md
results/run_20250412_163940/: summary.md
results/run_20250412_163940/dataset_benchmarks/: dataset_benchmarks.csv  dataset_benchmarks.md  dataset_benchmarks.tex
results/run_20250412_163940/generator_benchmarks/: generator_benchmarks.csv  generator_benchmarks.md  generator_benchmarks.tex
results/run_20250412_163940/influence_benchmarks/: influence_benchmarks.csv  influence_benchmarks.md  influence_benchmarks.tex
results/run_20250412_165749/: summary.md
results/run_20250412_165749/dataset_benchmarks/: dataset_benchmarks.csv  dataset_benchmarks.md  dataset_benchmarks.tex
results/run_20250412_165749/generator_benchmarks/: generator_benchmarks.csv  generator_benchmarks.md  generator_benchmarks.tex
results/run_20250412_165749/influence_benchmarks/: influence_benchmarks.csv  influence_benchmarks.md  influence_benchmarks.tex
results/run_20250412_170243/: summary.md
results/run_20250412_170243/dataset_benchmarks/: dataset_benchmarks.csv  dataset_benchmarks.md  dataset_benchmarks.tex
results/run_20250412_170243/generator_benchmarks/: generator_benchmarks.csv  generator_benchmarks.md  generator_benchmarks.tex
results/run_20250412_182801/: summary.md
results/run_20250412_185450/: summary.md
results/run_20250412_192320/: summary.md
results/run_20250412_212640/: summary.md
tests/: conftest.py  test_embedder.py  test_generators.py  test_influence.py
(+58 files in other folders)
