[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphem"
version = "0.1.0"
description = "A graph embedding library based on JAX for efficient k-nearest neighbors"
readme = "README.md"
authors = [
    {name = "Igor Rivin"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "pandas>=1.3.0",
    "plotly>=5.5.0",
    "scipy>=1.7.0",
    "ndlib>=5.1.0",
    "loguru>=0.6.0",
    "kaleido>=0.2.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.15.0",
    "black>=22.0.0",
]
profiling = [
    "line_profiler>=4.0.0",
    "snakeviz>=2.2.0",
    "tensorboard>=2.10.0",
]

[project.urls]
"Homepage" = "https://github.com/igorrivin/graphem"
"Bug Tracker" = "https://github.com/igorrivin/graphem/issues"
