[metadata]
name = graphem
version = 0.1.0
description = A graph embedding library based on JAX for efficient k-nearest neighbors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorrivin/graphem
author = Igor Rivin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    jax>=0.3.0
    jaxlib>=0.3.0
    numpy>=1.21.0
    matplotlib>=3.5.0
    networkx>=2.6.0
    pandas>=1.3.0
    plotly>=5.5.0
    scipy>=1.7.0
    ndlib>=5.1.0
    loguru>=0.6.0
    kaleido>=0.2.1
    tqdm>=4.66.0
